fix:revent jumping of UI when displaying the transaction fee

--- a/src/modules/dashboard/components/Dialogs/CreatePaymentDialog/CreatePaymentDialogForm.css
+++ b/src/modules/dashboard/components/Dialogs/CreatePaymentDialog/CreatePaymentDialogForm.css
@@ -26,6 +26,7 @@
 }
 
 .domainPotBalance, .networkFee {
+  height: 0px;
   position: relative;
   bottom: 14px;
   font-size: var(--size-tiny);
